# havoqgt

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  HavoqGT_LGPL_License.txt  LICENSE  README  README.md  README_CORAL2.md  TUTORIALS.md  annotated.html  annotated.js  apt.txt  basic_usage.html  breadth__first__search_8hpp.html  breadth__first__search_8hpp.js  breadth__first__search_8hpp__dep__incl.dot  breadth__first__search_8hpp__dep__incl.md5  breadth__first__search_8hpp__incl.dot  breadth__first__search_8hpp__incl.md5  breadth__first__search_8hpp_source.html  cache__utilities_8hpp.html  cache__utilities_8hpp.js  cache__utilities_8hpp__dep__incl.dot  cache__utilities_8hpp__dep__incl.md5  cache__utilities_8hpp__incl.dot  cache__utilities_8hpp__incl.md5  cache__utilities_8hpp_a035511cb52e09b10263bb5c1ba3981d2_icgraph.dot  cache__utilities_8hpp_a035511cb52e09b10263bb5c1ba3981d2_icgraph.md5  cache__utilities_8hpp_a1afdf2f7af4545c113121dd8a49f542b_cgraph.dot  cache__utilities_8hpp_a1afdf2f7af4545c113121dd8a49f542b_cgraph.md5  cache__utilities_8hpp_a24f68fb23f2181a1eb9331fc09ef4ed0_cgraph.dot  cache__utilities_8hpp_a24f68fb23f2181a1eb9331fc09ef4ed0_cgraph.md5  cache__utilities_8hpp_a25a79991782fbedffc49a2c59274566d_icgraph.dot  cache__utilities_8hpp_a25a79991782fbedffc49a2c59274566d_icgraph.md5  cache__utilities_8hpp_a293fe26c8eeb5ee72fe339020b86dd8d_cgraph.dot  cache__utilities_8hpp_a293fe26c8eeb5ee72fe339020b86dd8d_cgraph.md5  cache__utilities_8hpp_a77ca0c7b0ecaa9aa11caf5265d2c1e36_cgraph.dot  cache__utilities_8hpp_a77ca0c7b0ecaa9aa11caf5265d2c1e36_cgraph.md5  cache__utilities_8hpp_a88e96bc7c00550f02e5a12b14ad45486_cgraph.dot  cache__utilities_8hpp_a88e96bc7c00550f02e5a12b14ad45486_cgraph.md5  (+1165 more)
CMakeModules/: FindBoost.cmake
clippy/: Brainstorm.md  COPYRIGHT  LICENSE-MIT  README.md  setup.py
clippy/clippy/: __init__.py  clippy.py  error.py  regcommand.py
clippy/cpp/: .clang-format  CMakeLists.txt
clippy/cpp/examples/: CMakeLists.txt  README.md  grumpy.cpp  howdy.cpp  karen.cpp  return_tuple.cpp  sort_edges.cpp  sort_strings.cpp  st_path.cpp  st_shortest_path.cpp  sum.cpp  test.cpp
clippy/cpp/include/clippy/: clippy.hpp
clippy/cpp/scripts/: build.sh  do_cmake.sh
data/kron_inputs/: A_G500_S10_tc.edges  A_G500_S11_tc.edges  A_G500_S12_tc.edges  A_G500_S13_tc.edges  A_G500_S14_tc.edges  A_G500_S15_tc.edges  A_G500_S16_tc.edges  B_G500_S10_tc.edges  B_G500_S11_tc.edges  B_G500_S12_tc.edges  B_G500_S13_tc.edges  B_G500_S14_tc.edges  B_G500_S15_tc.edges  B_G500_S16_tc.edges
doc/: Doxyfile.in  developer_guide.dox  getting_started.dox  mainpage.dox
examples/prunejuice/: README.md
include/: CMakeLists.txt  adjacency_list_graph.hpp  mailbox.hpp  rmat_edge_generator.hpp  termination_detection.hpp  visitor_queue.hpp
include/detail/: hash.hpp  omp.hpp
include/dynamic_graph_store/: dist_dynamic_graphstore.hpp  edge_list_buffer.hpp  graphstore_utilities.hpp  numa_allocator.hpp
include/havoqgt/: #construct_dynamicgraph.hpp#  MultiRHH.hpp  RHH.hpp  RHHAdjacencyMatrix.hpp  RHHAdjacencyMatrix_inh.hpp  RHHMain.hpp  RHHMgr.hpp  RHHStatic.hpp  RHHStatic_test.cpp  betweenness_centrality.hpp  bfs_dynamic.hpp  bitmap.hpp  boost_distributed_db.hpp  breadth_first_search.hpp  breadth_first_search_modified.hpp  cache_utilities.hpp  child_count_visitor.hpp  connected_components.hpp  connected_components_dynamic.hpp  error.hpp  (+81 more)
jupyter_notebook/: Makefile  README.md  connection_subgraph_undirected.cpp  environment.yml
pytools/: README.md  create_reaction_reaction_graph.py
query_preprocessor/: README
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  (+83 more)
spokepathpyui/: basicgraph.py  inputui.py  inpututil.py  outputui.py
src/: CMakeLists.txt  CORAL2_benchmark.cpp  Makefile  baseline_bench.cpp  bfs_baseline.cpp  bfs_baseline_bench.cpp  bfs_bench.hpp  bfs_csr_bench.cpp  bfs_dynamicdegreeawaregraphstore_bench.cpp  bfs_dynamicdegreeawaregraphstore_bench.cpp.autosave  bfs_dynamicgstore_bench.cpp  bfs_rhhda_bench.cpp  degree_count.cpp  degree_distribution.cpp  dist_bench.cpp  dist_dgs_test.cpp  dynamic_graphconst_bench.cpp  dynamic_graphstore_simple_example.cpp  dynamicdegreeawaregraphstore_bench.cpp  dynamicdegreeawaregraphstore_bench.hpp  dynamicdegreeawaregraphstore_bench_with_baseline.cpp  dynamicgraphstore_bench.hpp  dynamicgraphstore_test.cpp  el_convert_simple.cpp  evaluate_ho_rw.cpp  exact_ecc_result_processor.cpp  extract_2core_graph.cpp  extract_kth_core_graph.cpp  extract_unique_connected_component_graph.cpp  generate_graph.cpp  generate_graph_dynamic.cpp  generate_pa_graph.cpp  generate_rmat.cpp  generate_rmat_edge_list.cpp  graphconst_dynamicgstore_bench.cpp  ingest_edge_list.cpp  ingest_edge_metadata.cpp  ingest_flow_edge_process.cpp  ingest_hdf5_edge_list.cpp  ingest_kronecker.cpp  (+74 more)
test/: CMakeLists.txt  test_bfs.cpp  test_bfs_delegate.cpp  test_cc.cpp  test_cc_delegate.cpp  test_delegate_graph_static.cpp  test_kronecker.cpp  test_mpi_communicator.cpp  test_rhh.cpp  test_rhh_map.cpp  test_rhh_set.cpp  test_rhh_unordered_map.cpp  test_rhh_unordered_set.cpp  test_sequential.cpp  test_static_bfs.cpp
test/datasets/: CMakeLists.txt  bfs_level_rmat_s17  binary_tree_1023  binary_tree_1023-0  binary_tree_1023-1  binary_tree_7  cc_rmat_s17  chain_10  chain_1024  chain_1024-0  chain_1024-1  edge_list_rmat_s17-0  edge_list_rmat_s17-1  edge_list_rmat_s17-2  edge_list_rmat_s17-3  edge_list_rmat_s17-4  edge_list_rmat_s17-5  edge_list_rmat_s17-6  edge_list_rmat_s17-7  star_10  star_1024  star_1024-0  star_1024-1
test/include/: bfs.hpp  cc.hpp  create_delegate_graph.hpp  havoqgt_setup.hpp  ingest_edges.hpp  input_graph.hpp  read_delegate_graph.hpp  util.hpp
(+275 files in other folders)
