function(add_exe source)
  if (MPI_FOUND AND Boost_FOUND )
  add_executable(${source} ${source})
    #include_havoqgt()
    include_link_mpi(${source})
    include_link_boost(${source})
    include_link_threads(${source})
    include_directories(${source})
    install(TARGETS ${source} DESTINATION bin)
  endif( MPI_FOUND AND Boost_FOUND )
endfunction()

#add_exe( ingest_edge_list )
#add_exe( run_page_rank )
#add_exe( mailbox_rate_test )
#add_exe( run_triangle_count )
#add_exe( new_mailbox_rate_test )
#add_exe( transfer_graph )
#add_exe( run_cc )
#add_exe( run_gc )
#add_exe( run_bfs )
#add_exe( run_kth_core )
add_exe( generate_rmat )
add_exe( generate_pa_graph )
add_exe( run_rhh_test )
add_exe( run_dgs_test )
add_exe( run_dgs_bench )
add_exe( run_gc_dynamic )
add_exe( run_cc_dynamic )
add_exe( run_bfs_dynamic )
add_exe( run_sssp_dynamic )
add_exe( run_page_rank_single_dgs )
add_exe( run_page_rank_single_csr )
add_exe( run_bfs_single_dgs )
add_exe( run_bfs_dgs )
add_exe( run_bfs_single_csr )
add_exe( run_dgs_test_single )
add_exe( run_dgs_simple_exapmle )
add_exe( run_dgs_single_bench )
