function(add_exe source)
  if (MPI_FOUND AND Boost_FOUND )
    add_executable(${source} ${source})
    #include_havoqgt()
    include_link_mpi(${source})
    include_link_boost(${source})
    include_link_threads(${source})
    include_directories(${source})
    install(TARGETS ${source} DESTINATION bin)
  endif( MPI_FOUND AND Boost_FOUND )
endfunction()

#add_exe( generate_rmat )
#add_exe( ingest_edge_list )
add_exe( run_bfs )
add_exe( run_kbfs_sync )
add_exe( run_kbfs )
#add_exe( run_cc )
#add_exe( run_kth_core )
#add_exe( run_page_rank )
#add_exe( edge_iter )
#add_exe( transfer_graph )
#add_exe( run_triangle_count )
#add_exe( run_new_triangle_count )
#add_exe( mailbox_rate_test )
#add_exe( new_mailbox_rate_test )
