function(add_exe source)
  if (MPI_FOUND AND Boost_FOUND )
  add_executable(${source} ${source})
    #include_havoqgt()
    include_link_mpi(${source})
    include_link_boost(${source})
    include_link_threads(${source})
    include_link_stdcppfs(${source})
    if (LIBUMAP)
      include_link_umap(${source})
    endif()
    include_directories(${source})
    install(TARGETS ${source} DESTINATION bin)
  endif( MPI_FOUND AND Boost_FOUND )
endfunction()

add_exe( generate_rmat )
add_exe( generate_rmat_edge_list )
add_exe( ingest_edge_list )
add_exe( ingest_kronecker )
add_exe( run_bfs )
add_exe( run_sssp )
add_exe( run_cc )
add_exe( run_kth_core )
add_exe( run_page_rank )
# add_exe( edge_iter )
add_exe( transfer_graph )
add_exe( run_new_triangle_count )
add_exe( el_convert_simple )
add_exe( ygm_rmat_test )
add_exe( run_ktruss_unroll )
add_exe( run_triangle_count_per_edge )
add_exe( run_pattern_matching_beta_1.1 )
add_exe( CORAL2_benchmark)
# add_exe( mailbox_rate_test )
# add_exe( new_mailbox_rate_test )
add_exe( manage_graph )

add_executable(run_shm_cc run_shm_cc)
install(TARGETS run_shm_cc DESTINATION bin)

if ((DEFINED HDF5_FOUND) AND (HDF5_FOUND))
  add_exe( ingest_hdf5_edge_list )
  include_link_hdf5( ingest_hdf5_edge_list )
endif()